--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
+
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
   </head>
 
   <body>
-    <%= yield %>
+    <!-- navbar PARTIAL DA NAVBAR _navbar-->
+    <%= render 'shared/navbar' %>
+
+      <%= yield %>
+
+    <!-- footer PARTIAL DO FOOTER _footer-->
+    <%= render 'shared/footer' %>
+
   </body>
 </html>
