--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,7 +8,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <% if true %>
+  <% if false %>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
@@ -31,10 +31,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <%= link_to "Entrar", "#", class: "nav-link" %>
+          <%= link_to "Entrar", "#", class: "nav-link btn btn-success mx-2 py-1 button-light-shadow" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Cadastre-se", "#", class: "nav-link" %>
+          <%= link_to "Cadastre-se", "#", class: "nav-link btn btn-warning py-1 button-light-shadow" %>
         </li>
       </ul>
     </div>
