Added logged user path to navbar; added 'beta' description

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://source.unsplash.com/random/1200x800/?forest);">
   <div class="container">
-    <h1 id="textshadow">TradeFlora</h1>
+    <h1 id="textshadow">TradeFlora<sup>beta</sup></h1>
     <p>Um programa que promove a compensação ambiental</p>
     <%= link_to "Saiba mais", "#", class: "btn btn-success button-light-shadow" %>
   </div>
