--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <%= link_to "/", class: "navbar-brand" do %>
-    <i class="fas fa-seedling"></i><span> TRADEFLORA</span>
+    <i class="fas fa-seedling"></i><span> TRADEFLORA<sup>beta</sup></span>
   <% end %>
 
 
@@ -8,7 +8,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <% if false %>
+  <% if user_signed_in? %>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
@@ -23,6 +23,7 @@
             <%= link_to "Meu Perfil", "#", class: "dropdown-item" %>
             <%= link_to "Minhas Áreas", "#", class: "dropdown-item" %>
             <%= link_to "Configurações", "#", class: "dropdown-item" %>
+            <%= link_to "Sair", destroy_user_session_path, method: "delete", class: "dropdown-item" %>
           </div>
         </li>
       </ul>
