--- a/app/views/areas/show.html.erb
+++ b/app/views/areas/show.html.erb
@@ -1,5 +1,5 @@
-<%=area.user_id.name%>
-<%=area.description%>
-<%=area.lat%>
-<%=area.log%>
-<%=area.basin%>
+<%=@area.user.email%>
+<%=@area.description%>
+<%=@area.lat%>
+<%=@area.long%>
+<%=@area.basin.name%>
