página edit-user com todos os campos da tabela p alterar e em português

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,11 +11,11 @@
     <%= f.input :document_number, label: "CPF/CNPJ",
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: "document_number" }%>
+                input_html: { autocomplete: "document-number" }%>
     <%= f.input :phone_number, label: "telefone",
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: "phone_number" }%>
+                input_html: { autocomplete: "phone-number" }%>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
