--- a/app/assets/stylesheets/pages/_areas.scss
+++ b/app/assets/stylesheets/pages/_areas.scss
@@ -6,34 +6,35 @@
   flex-grow: 1;
 }
 
+#paddedheader {
+  padding: 10px 0px 2px 12px;
+}
+
 .main-container {
   display: flex;
   justify-content: space-between;
   width: 100%;
 }
 
-/*Smallest device*/
-@media (min-width: 100px) and (max-width: 575px) {
+@media (min-width: 100px) and (max-width: 700px) {
   .cards {
     grid-template-columns: 1fr;
   }
 }
 
-/*Small devices (landscape phones, 576px and up)*/
-@media (min-width: 576px) {
+@media (min-width: 700px) {
   .cards {
     grid-template-columns: 1fr 1fr;
   }
 }
 
-/*Medium devices (tablets, 768px and up)*/
-@media (min-width: 950px) {
+@media (min-width: 1000px) {
   .cards {
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1450px) {
   .cards {
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
