--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <%= link_to "Página Principal", "#", class: "nav-link" %>
+          <%= link_to "Página Principal", "/", class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "Mensagens", "#", class: "nav-link" %>
