--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://source.unsplash.com/random/1200x800/?forest);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)), url(assets/homeimages/HomeImageLarge.jpg);">
   <div class="container">
     <h1 id="textshadow">TradeFlora<sup>beta</sup></h1>
     <p>Um programa que promove a compensação ambiental</p>
