Ajuste views, rotas e controlers show, trade e proposals

--- a/app/views/areas/_form.html.erb
+++ b/app/views/areas/_form.html.erb
@@ -5,6 +5,6 @@
 
   <%= f.input :long %>
   
-  <%= f.input :basin_id, collection: @basins %>
+  <%= f.input :basin_id, collection: @basins.name %>
   <%= f.button :submit %>
 <% end %>
