--- a/app/views/pages/meu_perfil.html.erb
+++ b/app/views/pages/meu_perfil.html.erb
@@ -1,3 +1,48 @@
-<div class="mt-5">
-  <h1>Usuário: <%=@user.name%></h1>
+
+<div class="container">
+  <div>
+    <h1 class="margintop70">Usuário <%=@user.name%></h1>
+    <h3>Dados cadastrais:</h3>
+    <hr>
+  </div>
+  <div>
+    <ul>
+      <li>E-mail: <%=@user.email %> </li>
+      <li>Natureza: <%=@user.user_type %></li>
+      <li>Telefone: <%= @user.phone_number %></li>
+      <li>Documento: <%= @user.document_number %></li>
+    </ul>
+  </div>
+  <div>
+    <h2>Área(s) de <%= @user.name %>:</h2>
+    <hr>
+    <div class="cards">
+      <% @user.areas.each do |area| %>
+        <div class="card-trip">
+          <img src="assets/<%=area.basin.name%>.jpg">
+          <div class="card-trip-infos">
+            <div>
+              <p class="alignright">Bacia: <%= area.basin.name %></p>
+              <h2><%= area.description %></h2>
+              <p><i class="fas fa-globe-americas"></i> Coordenadas:</p>
+              <ul>
+                <li>
+                  Latitude: <%= area.lat.round(6) %>
+                </li>
+                <li>
+                  Longitude: <%= area.long.round(6) %>
+                </li>
+              </ul>
+              <p><%= link_to "Saiba mais", area_path(area), class: "btn btn-success button-light-shadow" %>
+              </p>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    </div>
+    <hr>
+    <div>
+    <p><%= link_to "Página Principal", root_path, class: "btn btn-success button-light-shadow" %></p>
+    </div>
+  </div>
 </div>
