--- a/app/assets/stylesheets/pages/_areas.scss
+++ b/app/assets/stylesheets/pages/_areas.scss
@@ -66,6 +66,7 @@
   // top: 0;
   // background: white;
   background-color: $light-gray;
+  // display: -webkit-inline-box;
 }
 
 /*Media Queries*/
