--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -30,7 +30,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Cadastre-se" %>
+    <%= f.button :submit, "Cadastre-se", class: "btn btn-warning mb-2" %>
   </div>
 <% end %>
 
