--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,6 +2,8 @@
   background-size: cover;
   background-position: center;
   padding: 150px 0;
+  width: 100vw;
+  margin-left: calc(50% - 50vw);
 }
 
 .banner h1 {
