--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,8 +20,7 @@
         <li class="nav-item dropdown">
           <%= image_tag "https://images-na.ssl-images-amazon.com/images/I/813NvJJYsML.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "Meu Perfil", "#", class: "dropdown-item" %>
-            <%= link_to "Minhas Áreas", "#", class: "dropdown-item" %>
+            <%= link_to "Meu Perfil", meu_perfil_path, class: "dropdown-item" %>
             <%= link_to "Editar meus dados", edit_user_registration_path, class: "dropdown-item" %>
             <%= link_to "Sair", destroy_user_session_path, method: "delete", class: "dropdown-item" %>
           </div>
