--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <h1 id="textshadow">TradeFlora<sup>beta</sup></h1>
     <p>Um programa que promove a compensação ambiental</p>
-    <%= link_to "Saiba mais", "#", class: "btn btn-success button-light-shadow" %>
+     <%= link_to "Áreas disponíveis", areas_path, class: "btn btn-success button-light-shadow" %>
   </div>
 </div>
 
