--- a/app/views/pages/proposals.html.erb
+++ b/app/views/pages/proposals.html.erb
@@ -26,11 +26,7 @@
           <% end %>
         </tbody>
       </table>
+    <p> <%= link_to 'Ver todas as áreas', areas_path, class: "btn btn-success button-light-shadow" %> </p>
+    <p> <%= link_to 'Voltar ao início', root_path, class: "btn btn-success button-light-shadow" %> </p>
     </div>
-
-  <br>
-    <p> <%= link_to 'Ver todas as áreas', areas_path %> </p>
-  <br>
-    <p> <%= link_to 'Voltar ao início', root_path %> </p>
-  <br>
 </div>
