--- a/app/views/areas/index.html.erb
+++ b/app/views/areas/index.html.erb
@@ -21,7 +21,7 @@
                 Longitude: <%= area.long.round(6) %>
               </li>
             </ul>
-            <p><%= link_to "Saiba mais", area_path(area), class: "btn btn-success button-light-shadow" %>
+            <p><%= link_to "Detalhar", area_path(area), class: "btn btn-success button-light-shadow" %>
             </p>
           </div>
         </div>
@@ -39,6 +39,7 @@
       </div>
     <% end %>
     <p><%= link_to "Crie uma área", new_area_path(@area), class: "btn btn-success button-light-shadow" %></p>
+
   </div>
 </div>
 
