--- a/app/views/pages/trades.html.erb
+++ b/app/views/pages/trades.html.erb
@@ -24,13 +24,8 @@
             </tr>
           <% end %>
         </tbody>
-      </table>
+         </table>
+    <p> <%= link_to 'Ver todas as áreas', areas_path, class: "btn btn-success button-light-shadow" %> </p>
+    <p> <%= link_to 'Voltar ao início', root_path, class: "btn btn-success button-light-shadow" %> </p>
     </div>
-
-<br>
-    <p> <%= link_to 'Ver todas as áreas', areas_path %> </p>
-<br>
-    <p> <%= link_to 'Voltar ao início', root_path %> </p>
-<br>
-
 </div>
