--- a/app/views/trades/new.html.erb
+++ b/app/views/trades/new.html.erb
@@ -4,7 +4,7 @@
 <%= simple_form_for([@area, @trade], url: area_trades_path(@area)) do |f| %>
 	<%= f.hidden_field :user_id, value: current_user.id %>
 	<%= f.hidden_field :area_id, value: @area.id %>
-	<%= f.input :status, placeholder: "Há interesse em reflorestar essa área?" %>
+	<%= f.input :status, label: "Indique seu interesse" %>
 	<%= f.check_box :viewed, label: "Tenho interesse (mudar para função que agora está no status)"%>
 	<%= f.button :submit, "Registrar", class: "btn btn-success" %>
 <% end %>
