--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,7 @@
 // Specific CSS for your home-page
 body {
-  min-height: 100vh;
+  min-height: 90vh;
+  margin-top: 10vh;
   display:flex; 
   flex-direction:column; 
   justify-content: space-between;
