correcao do footer completa

--- a/app/views/areas/show.html.erb
+++ b/app/views/areas/show.html.erb
@@ -1,5 +1,5 @@
 
-<div class="container" class="margintop70">
+<div class="container">
   <br>
   
   <div class="border" id="map" style="height: 300px"></div>
