--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
   </head>
 
-  <body class="margintop70">
+  <body>
     <!-- navbar PARTIAL DA NAVBAR _navbar-->
     <%= render 'shared/navbar' %>
       <div class="container">
