--- a/app/views/areas/index.html.erb
+++ b/app/views/areas/index.html.erb
@@ -1,6 +1,6 @@
 <!-- <br><br><br> -->
 <div class="ml-3">
-  <h1 id="headermargintop">Áreas cadastradas</h1>
+  <h1>Áreas cadastradas</h1>
 </div>
 <div class="content">
   <div class="cards">
