--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,10 @@
   </head>
 
   <body>
+
+    <!-- flashes PARTIAL DOS ALERTAS flashes -->
+    <%= render 'shared/flashes' %>
+
     <!-- navbar PARTIAL DA NAVBAR _navbar-->
     <%= render 'shared/navbar' %>
       <div class="container">
