--- a/app/views/pages/meu_perfil.html.erb
+++ b/app/views/pages/meu_perfil.html.erb
@@ -1,7 +1,7 @@
 
 <div class="container">
   <div>
-    <h1>Usuário <%=@user.name%></h1>
+    <h1><%=@user.name%></h1>
     <h3>Dados cadastrais:</h3>
     <hr>
   </div>
