--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>Edite seus dados <%= resource_name.to_s.humanize %></h2>
+<h2>Edite seus dados</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
@@ -8,7 +8,7 @@
     <%= f.input :name, label: "Nome", required: true, autofocus: true %>
     <%= f.input :document_number, label: "CPF/CNPJ", required: true, autofocus: true %>
     <%= f.input :phone_number, label: "Telefone", required: true, autofocus: true %>
-    
+
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
@@ -28,12 +28,14 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Atualizar" %>
+    <%= f.button :submit, "Atualizar", class: "btn btn-success button-light-shadow mb-2" %>
   </div>
 <% end %>
 
-<h3>Cancelar minha conta</h3>
+<div>
 
-<p>Insatisfeito? <%= link_to "Cancelar minha conta", registration_path(resource_name), data: { confirm: "Tem certeza?" }, method: :delete %></p>
 
-<%= link_to "Voltar", :back %>
+  <%= link_to "Voltar", :back %><br>
+  <%= link_to "Cancelar minha conta", registration_path(resource_name), data: { confirm: "Tem certeza?" }, method: :delete, class: "text-right" %></p>
+
+</div>
