--- a/app/views/areas/show.html.erb
+++ b/app/views/areas/show.html.erb
@@ -1,10 +1,10 @@
 
 <div class="container">
-  <br>
   
-  <div class="border" id="map" style="height: 300px"></div>
-
-  <br>
+  <div id="map"
+       style="width: 100%; height: 300px;"
+       data-markers="<%= @markers.to_json %>"
+       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
 
 
   <div class="row">
