Minor changes in translation

--- a/app/views/areas/show.html.erb
+++ b/app/views/areas/show.html.erb
@@ -1,7 +1,7 @@
 
 <div class="container">
   <br>
-  
+
   <div class="border" id="map" style="height: 300px"></div>
 
   <br>
@@ -13,11 +13,11 @@
       <table class="table table-bordered">
         <tbody>
           <thead>
-            <th>Description (m²)</th>
-            <th>Basin</th>
-            <th>Action</th>
+            <th>Descrição (m²)</th>
+            <th>Bacia</th>
+            <th>Ação</th>
           </thead>
-         
+
             <tr>
               <td><%= @area.description %></td>
               <td><%= @area.basin.name %></td>
