--- a/app/assets/stylesheets/pages/_areas.scss
+++ b/app/assets/stylesheets/pages/_areas.scss
@@ -53,16 +53,13 @@
 }
 
 #searchbox {
-  flex-grow: 1;
   grid-gap: 16px;
   padding: 16px;
-  // height: 100vh;
-  width: 450px;
-  // position: sticky;
-  // top: 0;
-  // background: white;
+  width: 500px;
+  height: 100vh;
+  position: sticky;
+  top: 45px;
   background-color: $light-gray;
-  // display: -webkit-inline-box;
 }
 
 /*Media Queries*/
