--- a/app/views/pages/meu_perfil.html.erb
+++ b/app/views/pages/meu_perfil.html.erb
@@ -1,111 +1,129 @@
 
-<div class="container text-secondary">
-  <div>
-    <h1><%=@user.name%></h1>
-    <h3>Dados cadastrais:</h3>
-    <hr>
-  </div>
-  <div>
-    <ul>
-      <li>E-mail: <%=@user.email %> </li>
-      <li>Natureza: <%=@user.user_type %></li>
-      <li>Telefone: <%= @user.phone_number %></li>
-      <li>Documento: <%= @user.document_number %></li>
-    </ul>
-  </div>
-  <hr>
-  
-  <%if @user.areas.count > 0%>
-    
-    <div id="accordion">
-      <div class="card">
-        <div class="card-header" id="headingOne">
-          <h5 class="mb-0">
-            <button class="btn btn-link text-secondary" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-              <h3>Áreas disponibilizadas</h3>
-            </button>
-          </h5>
-        </div>
+<h2>Meu perfil</h2>
+  <br>
+  <!-- Nav tabs -->
+  <ul class="nav nav-tabs" role="tablist">
+    <li class="nav-item">
+      <a class="nav-link active" data-toggle="tab" href="#areas-de-interesse">áreas de interesse</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" href="#areas-disponibilizadas">áreas disponibilizadas</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" href="#minhas-propostas">minhas propostas</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" href="#dados-cadastrais">dados cadastrais</a>
+    </li>
+  </ul>
 
-        <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-          <div class="card-body text-secondary">            
-          <% @user.areas.each do |area| %>
-            <div class="card-trip">
-              <img src="assets/<%=area.basin.name%>.jpg">
-              <div class="card-trip-infos">
-                <div>
-                  <p class="alignright">Bacia: <%= area.basin.name %></p>
-                  <h2><%= area.description %></h2>
-                  <p><i class="fas fa-globe-americas"></i> Coordenadas:</p>
-                  <ul>
-                    <li>
-                      Latitude: <%= area.lat.round(6) %>
-                    </li>
-                    <li>
-                      Longitude: <%= area.long.round(6) %>
-                    </li>
-                  </ul>
-                  <p><%= link_to "Detalhes", area_path(area), class: "btn btn-success button-light-shadow" %>
-                  </p>
-                </div>
-              </div>
-            </div>
-          <% end %>
-          </div>
-        </div>
-      </div>
-    <%else%>
-      <h3> Você ainda não disponibilizou nenhuma área </h3>
-      <p><%= link_to "Crie uma área", new_area_path(@area), class: "btn btn-success button-light-shadow" %></p>
-    <%end%>
-    <hr>
-    <%if @user.trades.count > 0%>
-      <div class="card">
-        <div class="card-header" id="headingTwo">
-          <h5 class="mb-0">
-            <button class="btn btn-link collapsed text-secondary" data-toggle="collapse" data-target="#collapseTwo" aria-controls="collapseTwo">
-            <h3>Áreas de Interesse</h3>
-            </button>
-          </h5>
-        </div>
-      <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+  <!-- Tab panes -->
+  <div class="tab-content">
+    <div id="areas-de-interesse" class="container tab-pane active"><br>
+      <%if @user.trades.count > 0%>
         <div class="card-body">
           <div class="row">
             <div class="col-sm-12 col-md-6">
-              <table class="table table-bordered text-secondary">
-                <tbody>
-                  <thead>
-                    <th>Tamanho (m²)</th>
-                    <th>Bacia</th>
-                    <th>Proprietário</th>
-                    <th>Email</th>
-                    <th>Telefone</th>
+             <table class="table table-bordered">
+                <thead>
+                  <th>Tamanho (m²)</th>
+                  <th>Bacia</th>
+                  <th>Proprietário</th>
+                  <th>Email</th>
+                  <th>Telefone</th>
                   </thead>
-                <% @user.trades.each do |trade| %>
-                  <% area = trade.area %>
-                  <tr>
+                   <tbody>
+                  <% @user.trades.each do |trade| %>
+                    <% area = trade.area %>
+                    <tr>
                     <td><%= area.description %></td>
                     <td><%= area.basin.name %></td>
                     <td><%= area.user.name %></td>
                     <td><%= area.user.email %></td>
                     <td><%= area.user.phone_number %></td>
-                  </tr>
-                <% end %>
+                    </tr>
+                  <% end %>
                 </tbody>
               </table>
             </div>
           </div>
         </div>
-      </div>
+        <%else%>
+        <h5> Você ainda não declarou interesse por nenhuma área </h5>
+        <%= link_to 'Ver áreas disponíveis', areas_path, class: "btn btn-success button-light-shadow" %>
+      <%end%>
     </div>
-    <%else%>
-      <hr>
-      <h3> Você ainda não declarou interesse por nenhuma área </h3>
-      <%= link_to 'Ver áreas disponíveis', areas_path, class: "btn btn-success button-light-shadow" %>
-
+    <div id="areas-disponibilizadas" class="container tab-pane fade"><br>
+    <%if @user.areas.count > 0%> <!--se tiver areas cadastradas, --> 
+      <% @user.areas.each do |area| %>
+        <div class="card-trip">
+          <img src="assets/<%=area.basin.name%>.jpg">
+          <div class="card-trip-infos">
+            <p class="alignright">Bacia: <%= area.basin.name %></p>
+            <h2><%= area.description %></h2>
+            <p><i class="fas fa-globe-americas"></i> Coordenadas:</p>
+            <ul>
+              <li>
+                Latitude: <%= area.lat.round(6) %>
+              </li>
+              <li>
+                Longitude: <%= area.long.round(6) %>
+              </li>
+            </ul>
+            <p><%= link_to "Detalhes", area_path(area), class: "btn btn-success button-light-shadow" %></p>
+          </div>
+        </div>
+      <% end %>
+    <% else %>
+      <h5> Você ainda não disponibilizou nenhuma área </h5>
+      <p><%= link_to "Crie uma área", new_area_path(@area), class: "btn btn-success button-light-shadow" %></p>
+    <% end %>
+    </div>
+     <div id="minhas-propostas" class="container tab-pane fade"><br>
+    <%if @user.proposals.count > 0 %>
+      <div class="row">
+        <div class="col-sm-12 col-md-6">
+          <h3>Áreas de Interesse</h3>
+          <table class="table table-bordered">
+            <thead>
+              <th>Area</th>
+              <th>Bacia</th>
+              <th>Interessado</th>
+              <th>Email</th>
+              <th>Telefone</th>
+            </thead>
+            <tbody>
+              <% @user.proposals.each do |proposal| %>
+                <% user = proposal.user %>
+                <% area = proposal.area %>
+                <tr>
+                <td><%= area.description %></td>
+                <td><%= area.basin.name %></td>
+                <td><%= user.name %></td>
+                <td><%= user.email %></td>
+                <td><%= user.phone_number %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    <% else %>
+      <h5> Você ainda não declarou interesse por nenhuma área </h5>
     <%end%>
-  <hr>
-  <div class="d-flex align-items-center justify-content-around">
-    <p><%= link_to "Propostas Recebidas", my_proposals_path, class: "btn btn-success button-light-shadow" %>
+    </div>
+
+      <div id="dados-cadastrais" class="container tab-pane fade"><br>
+        <h1><%=@user.name%></h1>
+        <hr>
+        <ul>
+          <li>E-mail: <%=@user.email %> </li>
+          <li>Natureza: <%=@user.user_type %></li>
+          <li>Telefone: <%= @user.phone_number %></li>
+          <li>Documento: <%= @user.document_number %></li>
+        </ul>
+        <hr>
+        <%= link_to "Editar dados", edit_user_registration_path %>
+      </div>
   </div>
 </div>
