Adicionei o mapa geral de todas as áreas com busca com um botão de acesso na index, coloquei um texto na página inicial e ajustei mais uma coisinha ou outra

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,16 +1,13 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)), url(assets/homeimages/HomeImageLarge.jpg);">
   <div class="container">
     <h1 id="textshadow">TradeFlora<sup>beta</sup></h1>
-    <p>Um programa que promove a compensação ambiental</p>
+    <p>Um programa que promove a compensação florestal</p>
      <%= link_to "Áreas disponíveis", areas_path, class: "btn btn-success button-light-shadow" %>
   </div>
 </div>
-<div >
+<div style="text-align: justify;">
 <p class="pt-4">
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
- nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit 
- esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-  culpa qui officia deserunt mollit anim id est laborum.</p>
+O programa TRADEFLORA surge como uma estratégia para disseminar a formalização de parcerias entre detentores de áreas que precisam ser recuperadas e interessados em encontrar áreas de plantio pelos mais diversos motivos. Este projeto tem como objetivo inovar e aprimorar a execução da compensação da vegetação nativa desmatada, contribuindo diretamente para o avanço da Agenda 2030 nos seguintes quesitos: 1) conservação da biodiversidade; 2) operacionalização de instrumentos de mitigação das mudanças climáticas, como redução da perda líquida de florestas, pagamentos por serviços ambientais e sequestro de carbono; 3) proteção de mananciais; 4) promoção de maior coerência entre as políticas ambientais e de desenvolvimento econômico; e 5) incentivo a parcerias público-privadas e multissetoriais, em diversas escalas, para viabilizar o crescimento da infraestrutura nacional com menores impactos ambientais. 
+</p>
 </div>
 
