--- a/app/views/areas/index.html.erb
+++ b/app/views/areas/index.html.erb
@@ -49,6 +49,6 @@
         <p><%= link_to "Crie uma área", new_area_path(@area), class: "btn btn-success button-light-shadow" %></p>
         <hr>
       <%end%>
-      <p><%= link_to "Áreas disponíveis", areas_path, class: "btn btn-success button-light-shadow" %></p>
+      <p><%= link_to "Ver no Mapa", maps_path, class: "btn btn-success button-light-shadow" %></p>
     </div>
 </div>
