--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,10 +12,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <%= link_to "Página Principal", "/", class: "nav-link" %>
+          <%= link_to "Áreas Disponíveis", areas_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Mensagens", "#", class: "nav-link" %>
+          <%= link_to "Criar Área", new_area_path, class: "nav-link" %>
         </li>
         <li class="nav-item dropdown">
           <%= image_tag "https://images-na.ssl-images-amazon.com/images/I/813NvJJYsML.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
