--- a/app/views/trades/new.html.erb
+++ b/app/views/trades/new.html.erb
@@ -5,7 +5,7 @@
 	<%= f.hidden_field :user_id, value: current_user.id %>
 	<%= f.hidden_field :area_id, value: @area.id %>
 	<%= f.input :status, label: "Indique seu interesse" %>
-	<%= f.check_box :viewed, label: "Tenho interesse (mudar para função que agora está no status)"%>
+	<!--<%= f.check_box :viewed, label: "Tenho interesse (mudar para função que agora está no status)"%>-->
 	<%= f.button :submit, "Registrar", class: "btn btn-success" %>
 <% end %>
 
